removed duplicated pages marked pages to complete usage

--- a/_content-nav/breadcrumbs.html
+++ b/_content-nav/breadcrumbs.html
@@ -3,12 +3,11 @@ layout: code-examples
 collection-name: content-nav
 title: Breadcrumbs
 sub-title: Breadcrumbs
-usage: Breadcrumbs
+usage: Indicate the current page’s location within a navigational hierarchy. Separators are automatically added in CSS through the ::after pseudo class.
 --- 
 
-
  <nav class="breadcrumbs" aria-label="Breadcrumb">   
-   <ol id="breadcrumbs">
+   <ol id="breadcrumbs-example">
         <li class="breadcrumb-item"><a href="#">Home</a></li>
         <li class="breadcrumb-item"><a href="#">Next link</a></li>
     </ol>
