--- a/_typography/unordered-list.html
+++ b/_typography/unordered-list.html
@@ -1,9 +1,9 @@
 ---
 layout: code-examples
 collection-name: Typography
-title: Unordered list
+title: -Unordered list
 sub-title: Tags for Unordered lists
-usage: Add text for usage 
+usage: 
 
 ---
 
