fixed: hrefs, removed aria-required=“true” as no need -> NVDA and JAWS supports required removed role=“contentinfo”

--- a/_form-elements/input-fields.html
+++ b/_form-elements/input-fields.html
@@ -5,36 +5,36 @@ title: Input fields
 usage: Group form fields together into smaller chunks, this makes the form feel easier to complete and less intimidating. Labels should always be used as screen-readers will have problems if they are omitted. The wrapping label pattern is preferred over the use of the for attribute, as this requires a corresponding id on the target form input, which may change according to how it needs to be integrated with a backend system. All inputs have autocorrect="off" added for usability on mobiles and tablets.
 ---
 
-<form action="">
+<form action="1">
     <div class="form-group relative">
         <label for="name-1">Input (small)</label>
-        <input aria-required="true" required id="name-1" class="grey form-control input--small" type="text" placeholder="Enter your text here">
+        <input required id="name-1" class="grey form-control input--small" type="text" placeholder="Enter your text here">
         <ul class="current-errors"></ul>
     </div>
 </form>
 
-<form action="">
+<form action="2">
     <div class="form-group relative">
         <label for="name-2">Input (medium)</label>
-        <input aria-required="true" required id="name-2" class="grey form-control input--medium" type="text" placeholder="Enter your text here">
+        <input required id="name-2" class="grey form-control input--medium" type="text" placeholder="Enter your text here">
         <ul class="current-errors"></ul>
     </div>
 </form>
 
-<form action="">
+<form action="3">
     <div class="form-group relative">
         <label for="name-3">Input (large)</label>
-        <input aria-required="true" required id="name-3" class="grey form-control input--large" type="text" placeholder="Enter your text here">
+        <input required id="name-3" class="grey form-control input--large" type="text" placeholder="Enter your text here">
         <ul class="current-errors"></ul>
     </div>    
 </form>
 
-<form action="">
+<form action="4">
     <div class="form-group relative">
         <label for="currency">Currency input</label>
         <div class="input-group">
           <span class="input-group-addon" id="basic-addon1">£</span>
-          <input aria-required="true" required id="currency" class="grey form-control input--small currency" type="number">
+          <input required id="currency" class="grey form-control input--small currency" type="number">
         </div>
         <ul class="current-errors"></ul>
     </div>
