--- a/_content-nav/links.html
+++ b/_content-nav/links.html
@@ -14,7 +14,7 @@ usage: Note - for an external link, please add &lt;i class="fa fa-external-link"
 
     <br/><br/>
     <p>
-        This is text and .. <a href="https://" class="">This is an external link <i class="fa fa-external-link"></i></a>
+        This is text and .. <a href="#" class="">This is an external link <i class="fa fa-external-link"></i></a>
     </p>
     <p>
         This is text and .. <a href="#" class="external-link">This is an external link</a>
