--- a/_form-elements/select-menu.html
+++ b/_form-elements/select-menu.html
@@ -13,7 +13,7 @@ usage: ....
         </legend>
 
         <div class="create-select__arrow">
-            <select aria-required="true" required="" id="title" class="create-select" title="Your title">
+            <select  required id="title" class="create-select" title="Your title">
                 <option selected="" disabled="" value="">Select</option>
                 <option value="01">Miss</option>
                 <option value="01">Ms</option>
