--- a/_form-elements/labels.html
+++ b/_form-elements/labels.html
@@ -8,6 +8,6 @@ usage: Always use a label for a form field to explain what should be entered. Ma
 
 <div class="form-group relative">
     <label for="telephone-number">Phone number <span class="optional">(optional)</span></label>
-    <input aria-required="true" required="" id="telephone-number" class="grey form-control input--medium" type="tel">
+    <input required id="telephone-number" class="grey form-control input--medium" type="tel">
     <ul class="current-errors"></ul>
 </div>
