--- a/_form-elements/radio-buttons.html
+++ b/_form-elements/radio-buttons.html
@@ -5,17 +5,18 @@ title: Radio buttons
 usage: Radio buttons let a user select ONE of a limited number of choices 
 --- 
 
-<div class="form-group relative" id="radio">
-    <fieldset role="radiogroup" aria-required="true" required="true" id="radio-link">
-        <legend>
-          Do you wish to subscribe to our newsletter?
-        </legend>
-        <div>
-            <label for="yes" class="inline fancy-radio">Yes</label>
-            <input type="radio" id="yes" value="yes" name="newsletter" class="grey form-control fancy-radio">
-            <label for="no" class="inline fancy-radio">No</label>
-            <input type="radio" id="no" value="no" name="newsletter" class="grey form-control fancy-radio">
-            <ul class="current-errors"></ul>
-        </div>
+
+<fieldset required id="radio-link" role="radiogroup">
+    <legend class="sr-only">
+        Do you want to cascade this date change to future due dates?
+    </legend>
+    <div class="radio-wrapper">
+        <input required type="radio" name="date-cascade" id="yes" value="Yes" class="grey form-control fancy-radio">
+        <label for="yes" class="inline fancy-radio">Yes</label>
+
+        <input required type="radio" name="date-cascade" checked="checked" id="no" value="No" class="grey form-control fancy-radio">
+        <label for="no" class="inline fancy-radio">No</label>
+
+        <ul class="current-errors"></ul>
+    </div>
     </fieldset>
-</div>
