--- a/_page-patterns/sign-in-sign-up.html
+++ b/_page-patterns/sign-in-sign-up.html
@@ -16,14 +16,14 @@ usage:
           <label for="email">
             Email address
           </label>
-          <input aria-required="true" required="" id="email" class="form-control input--large" type="email">
+          <input required id="email" class="form-control input--large" type="email">
           <ul class="current-errors"></ul>
       </div>
       <div class="form-group relative">
           <label for="password">
             Password
           </label>
-          <input aria-required="true" required="" id="password" class="form-control input--large" type="password">
+          <input required id="password" class="form-control input--large" type="password">
           <ul class="current-errors"></ul>
           <a href="forgotten-password.html">Forgotten your password?</a>
       </div>
