--- a/_colours/colours-se.html
+++ b/_colours/colours-se.html
@@ -3,7 +3,7 @@ layout: code-examples
 collection-name: Colours
 title: Colours
 subtitle: The SE colour pallet.
-usage: The Scottish Enterprise online brand palette must be used at all times. When creating a website or application clours must be specified in hexadecimal formet.
+usage: The Scottish Enterprise online brand palette must be used at all times. When creating a website or application colours must be specified in hexadecimal format.
 ---
 <div class="clearfix">
     <div class="color-block">
