Updated colour sets

--- a/_colours/colours.html
+++ b/_colours/colours.html
@@ -7,31 +7,93 @@ usage: The Scottish Enterprise online brand palette must be used at all times. W
 ---
 <div class="clearfix">
     <div class="color-block">
-        <div class="color-block__color se-blue">
-            <div>SE Blue</div>
-            <div>#00427f</div>
-            <div><code class=" language-markup">$se-blue</code></div>
+        <div class="color-block__color se-dark-orange">
+            <div>SE Dark orange</div>
+            <div>#BF3A27</div>
+            <div><code class=" language-markup">$se-dark-orange</code></div>
         </div>
-        <div class="color-block__color se-bright-green">
-            <div>SE Bright Green</div>
-            <div>#00cc00</div>
-            <div><code class=" language-markup">$se-bright-green</code></div>
-        </div>
-        <div class="color-block__color se-light-blue">
-            <div>SE Light Blue</div>
-            <div>#2980b9</div>
-            <div><code class=" language-markup">$se-light-blue</code></div>
-        </div>
-        <div class="color-block__color se-dark-green">
-            <div>SE Dark Green</div>
-            <div>#03634D</div>
-            <div><code class=" language-markup">$se-dark-green</code></div>
+        <div class="color-block__color se-red">
+            <div>SE Red</div>
+            <div>#D60000</div>
+            <div><code class=" language-markup">$se-red</code></div>
         </div>
         <div class="color-block__color se-orange">
             <div>SE Orange</div>
             <div>#D65811</div>
             <div><code class=" language-markup">$se-orange</code></div>
         </div>
+        <div class="color-block__color se-amber">
+            <div>SE Amber</div>
+            <div>#FF9900</div>
+            <div><code class=" language-markup">$se-amber</code></div>
+        </div>
+        <div class="color-block__color se-yellow">
+            <div>SE Yellow</div>
+            <div>#FDB813</div>
+            <div><code class=" language-markup">$se-yellow</code></div>
+        </div>
+        <div class="color-block__color se-bright-green">
+            <div>SE Bright green</div>
+            <div>#00CC00</div>
+            <div><code class=" language-markup">$se-bright-green</code></div>
+        </div>
+        <div class="color-block__color accessible-green">
+            <div>Accessible green</div>
+            <div>#128512</div>
+            <div><code class=" language-markup">$accessible-green</code></div>
+        </div>
+        <div class="color-block__color se-dark-green">
+            <div>SE Dark green</div>
+            <div>#03634D</div>
+            <div><code class=" language-markup">$se-dark-green</code></div>
+        </div>
+        <div class="color-block__color se-turquoise">
+            <div>SE Turquoise</div>
+            <div>#00AAAD</div>
+            <div><code class=" language-markup">$se-turquoise</code></div>
+        </div>
+        <div class="color-block__color se-light-blue">
+            <div>SE Light blue</div>
+            <div>#2A7CB2</div>
+            <div><code class=" language-markup">$se-light-blue</code></div>
+        </div>
+        <div class="color-block__color se-blue">
+            <div>SE Blue</div>
+            <div>#00427F</div>
+            <div><code class=" language-markup">$se-blue</code></div>
+        </div>
+        <div class="color-block__color se-purple">
+            <div>SE Purple</div>
+            <div>#610E6C</div>
+            <div><code class=" language-markup">$se-purple</code></div>
+        </div>
+        <!---->
+
+        <!--<div class="color-block__color se-blue">-->
+            <!--<div>SE Blue</div>-->
+            <!--<div>#00427f</div>-->
+            <!--<div><code class=" language-markup">$se-blue</code></div>-->
+        <!--</div>-->
+        <!--<div class="color-block__color se-bright-green">-->
+            <!--<div>SE Bright Green</div>-->
+            <!--<div>#00cc00</div>-->
+            <!--<div><code class=" language-markup">$se-bright-green</code></div>-->
+        <!--</div>-->
+        <!--<div class="color-block__color se-light-blue">-->
+            <!--<div>SE Light Blue</div>-->
+            <!--<div>#2980b9</div>-->
+            <!--<div><code class=" language-markup">$se-light-blue</code></div>-->
+        <!--</div>-->
+        <!--<div class="color-block__color se-dark-green">-->
+            <!--<div>SE Dark Green</div>-->
+            <!--<div>#03634D</div>-->
+            <!--<div><code class=" language-markup">$se-dark-green</code></div>-->
+        <!--</div>-->
+        <!--<div class="color-block__color se-orange">-->
+            <!--<div>SE Orange</div>-->
+            <!--<div>#D65811</div>-->
+            <!--<div><code class=" language-markup">$se-orange</code></div>-->
+        <!--</div>-->
         <div class="color-block__color se-black">
             <div>SE Black</div>
             <div>#2F3E44</div>
