removed site.baseurl - fixing links

--- a/pages/colour-palettes.html
+++ b/pages/colour-palettes.html
@@ -12,7 +12,7 @@ permalink: /colour-palettes/
 <div class="row">
   {% for cookie in site.colour-palettes %}
   <div class="link-block col-md-4">
-    <h2><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></h2>
+    <h2><a href="{{ cookie.url }}">{{ cookie.title }}</a></h2>
     <p>Headings, body text, links, lists, inset text, hidden text.</p>
   </div>
   {% endfor %}
