--- a/pages/page-patterns.html
+++ b/pages/page-patterns.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Page patterns
-permalink: /page-patterns/
+<!--permalink: /page-patterns/-->
 ---
 
 {% include breadcrumbs.html %}
