--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -10,7 +10,7 @@ permalink: /buttons/
 <div class="row">
   {% for cookie in site.buttons %}
   <div class="link-block col-md-4">
-    <h2><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></h2>
+    <h2><a href="{{ cookie.url }}">{{ cookie.title }}</a></h2>
     {{ cookie.sub-title }}
   </div>
   {% endfor %}
