--- a/pages/data.html
+++ b/pages/data.html
@@ -12,7 +12,7 @@ permalink: /data/
 <div class="row">
   {% for cookie in site.datas %}
   <div class="link-block col-md-4">
-    <h2><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></h2>
+    <h2><a href="{{ cookie.url }}">{{ cookie.title }}</a></h2>
     <p>Headings, body text, links, lists, inset text, hidden text.</p>
   </div>
   {% endfor %}
