--- a/pages/grid.html
+++ b/pages/grid.html
@@ -11,7 +11,7 @@ permalink: /grid/
 <div class="row">
   {% for cookie in site.grid %}
   <div class="link-block col-md-4">
-    <h2><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></h2>
+    <h2><a href="{{ cookie.url }}">{{ cookie.title }}</a></h2>
     <!--{{ cookie.sub-title }}-->
   </div>
   {% endfor %}
