--- a/pages/use-of-images.html
+++ b/pages/use-of-images.html
@@ -10,7 +10,7 @@ permalink: /use-of-images/
 <div class="row">
   {% for cookie in site.use-of-images %}
   <div class="link-block col-md-4">
-    <h2><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></h2>
+    <h2><a href="{{ cookie.url }}">{{ cookie.title }}</a></h2>
     <p>Headings, body text, links, lists, inset text, hidden text.</p>
   </div>
   {% endfor %}
