--- a/pages/structure.html
+++ b/pages/structure.html
@@ -10,7 +10,7 @@ permalink: /structure/
 <div class="row">
   {% for cookie in site.structure %}
   <div class="link-block col-md-4">
-    <h2><a href="{{ cookie.url }}">{{ cookie.title }}</a></h2>
+    <h2><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></h2>
     {{ cookie.subtitle }}
   </div>
   {% endfor %}
