added missing pages for GDL components

--- a/_components/accordions.html
+++ b/_components/accordions.html
@@ -1,6 +1,8 @@
 ---
 layout: code-examples
+collection-name: Components
 title: Accordions
+subtitle: Accordions
 usage: Setting up an Accordion.... Must be wrapped with '&lt;id="accordion"&gt;' .. Must use the data toggles and parents as shown in the code. All id's MUST be unique. If multiple Accordions are on the same page - the id for Accordions must be unique.
 ---
 
