--- a/_components/application-progress-indicator.html
+++ b/_components/application-progress-indicator.html
@@ -1,6 +1,8 @@
 ---
 layout: code-examples
+collection-name: Components
 title: Application progress indicator
+subtitle: Application progress indicator
 usage: Progress indicator used on long multi-page forms to indicate where you are, what is completed and how much is still left to complete.
 ---
 
