--- a/_components/pre-loaders.html
+++ b/_components/pre-loaders.html
@@ -1,9 +1,10 @@
 ---
 layout: code-examples
+collection-name: Components
 title: Pre-loader
+subtitle: Pre-loader
 usage: Pre loader spinner
 ---
 
-<div class="progress">
+
 Awaiting content
-</div>
