--- a/_components/progress-indicator.html
+++ b/_components/progress-indicator.html
@@ -1,6 +1,8 @@
 ---
 layout: code-examples
+collection-name: Components
 title: Progress Indicator
+subtitle: Progress Indicator
 usage: The progress indicator is built with two (bootstrap) HTML elements, some CSS to set the width, and a few attributes.  The class "progress" as a wrapper to indicate the max value of the progress bar.  We use the inner class "progress-bar" to indicate the progress so far.  The lass "progress-bar" requires an inline style, utility class, or custom CSS to set it's width.  The progress-bar also requires some role and aria attributes to make it accessible.
 ---
 
