--- a/_form-elements/checkboxes.html
+++ b/_form-elements/checkboxes.html
@@ -2,7 +2,8 @@
 layout: code-examples
 collection-name: Form Elements 
 title: Checkboxes
-usage: Checkboxes let a user select ZERO or MORE options of a limited number of choices. 
+subtitle: Checkboxes
+usage: Checkboxes let a user select ZERO or MORE options of a limited number of choices.
 --- 
 
 <div class="form-group relative">
