--- a/_form-elements/errors.html
+++ b/_form-elements/errors.html
@@ -1,9 +1,8 @@
 ---
 layout: code-examples
 collection-name: Form Elements 
-title: -Dropdowns
-usage: Dropdowns usage
+title: Errors
+usage: Error messages etc.
 --- 
 
-
-<p>Dropdowns</p>
+Content to be developed
