--- a/_form-elements/fieldsets.html
+++ b/_form-elements/fieldsets.html
@@ -2,9 +2,10 @@
 layout: code-examples
 collection-name: Form Elements 
 title: Fieldset
-usage: Use fieldsets to group related form controls. The first element inside a fieldset must be a legend element which describes the group 
-
+subtitle: Fieldset
+usage: Use fieldsets to group related form controls. The first element inside a fieldset must be a legend element which describes the group
 ---
+
 <fieldset>
   <legend>This is a legend, a title for the group of controls</legend>
   <div class="input-wrapper">
