--- a/_page-sections/form-example.html
+++ b/_page-sections/form-example.html
@@ -1,6 +1,6 @@
 --- 
 layout: code-examples 
-collection-name: Page patterns 
+collection-name: Page sections
 title: Form example 
 usage: A form example used for accessibility, cross-browser and rwd testing
 ---
