--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@ layout: home
 
   <div class="link-block col-md-4">
     <h2><a href="structure/">Structure</a></h2>
-    <p><a href="structure/grid/">Grid</a> / <a href="structure/header/">Header</a> / <a href="structure/footer/">Footer</a> / <a href="structure/content/">Content</a></p>
+    <p>
+      <a href="structure/grid/">Grid</a> /
+      <a href="structure/header/">Header</a> /
+      <a href="structure/main_navigation/">Main navigation</a> /
+      <a href="structure/footer/">Footer</a> /
+      <a href="structure/content/">Content</a>
+      <a href="structure/preloader-spinner/">Preloader</a>
+    </p>
   </div>
 
   <div class="link-block col-md-4">
@@ -23,18 +30,47 @@ layout: home
 
   <div class="link-block col-md-4">
     <h2><a href="typography/">Typography</a></h2>
-    <p><a href="typography/body-copy">Body</a> / <a href="typography/h1-h6">Headings</a> / <a href="typography/fonts">Fonts</a> / <a href="typography/icons">Icons</a> / <a href="typography/info-notes">Info notes</a> / <a href="typography/ordered-list">Ordered lists</a> / <a href="typography/unordered-list">Unordered lists</a> / <a href="typography/inline-split-definition-list/">Inline lists</a></p>
+    <p>
+      <a href="typography/paragraphs-and-text-styles">Paragraphs and text styles</a> /
+      <a href="typography/h1-h6">Headings</a> /
+      <a href="typography/fonts">Fonts</a> /
+      <a href="typography/icons">Icons</a> /
+      <a href="typography/info-notes">Info notes</a> /
+      <a href="typography/ordered-list">Ordered lists</a> /
+      <a href="typography/unordered-list">Unordered lists</a> /
+      <a href="typography/inline-split-definition-list/">Inline lists</a>
+    </p>
   </div>
 </div>
 
 <div class="row">
   <div class="link-block col-md-4">
     <h2><a href="content-nav/">Content navigation</a></h2>
-    <p><a href="content-nav/breadcrumbs">Breadcrumbs</a> / <a href="content-nav/buttons">Buttons</a> / <a href="content-nav/links">Links</a> / <a href="content-nav/pagination">Pagination</a></p>
+    <p>
+      <a href="content-nav/breadcrumbs">Breadcrumbs</a> /
+      <a href="content-nav/buttons">Buttons</a> /
+      <a href="content-nav/links">Links</a> /
+      <a href="content-nav/pagination">Pagination</a>
+    </p>
   </div>
   <div class="link-block col-md-4">
     <h2><a href="form-elements/">Form elements</a></h2>
-    <p><a href="form-elements/fieldsets/">Fieldsets</a> / <a href="form-elements/labels">Labels</a> / <a href="form-elements/checkboxes">Checkboxes</a> / <a href="form-elements/radio-buttons">Radio buttons</a> / <a href="form-elements/file-upload">File upload</a> / <a href="form-elements/help-text">Help text</a> / <a href="form-elements/input-fields">Input fields</a> / <a href="form-elements/-errors">Errors</a> / <a href="form-elements/input-validation">Validation</a> / <a href="form-elements/select-menu">Select</a> / <a href="form-elements/-dropdowns">Dropdowns</a> / <a href="form-elements/text-area">Textarea</a></p>
+    <p>
+      <a href="form-elements/checkboxes">Checkboxes</a> /
+      <a href="form-elements/conditional-fields">Conditional fields</a> /
+      <!--<a href="form-elements/dropdowns">Dropdowns</a> /-->
+      <a href="form-elements/errors">Errors</a> /
+      <a href="form-elements/fieldsets/">Fieldsets</a> /
+      <a href="form-elements/file-upload">File upload</a> /
+      <a href="form-elements/form-navigation">Form navigation</a> /
+      <a href="form-elements/help-text">Help text</a> /
+      <a href="form-elements/input-fields">Input fields</a> /
+      <a href="form-elements/input-validation">Validation</a> /
+      <a href="form-elements/labels">Labels</a> /
+      <a href="form-elements/radio-buttons">Radio buttons</a> /
+      <a href="form-elements/select-menu">Select</a> /
+      <a href="form-elements/text-area">Textarea</a>
+    </p>
   </div>
   <div class="link-block col-md-4">
     <h2><a href="use-of-images/">-Use of Images</a></h2>
@@ -45,6 +81,30 @@ layout: home
 <div class="row">
   <div class="link-block col-md-4">
     <h2><a href="components/">Components</a></h2>
-    <p><a href="components/tables">Tables</a> / <a href="components/accordions">Accordions</a> / <a href="components/calendar">Calendar</a> / <a href="components/tabs">Tabs</a> / <a href="components/tooltips">Tooltips</a> / <a href="components/-pre-loaders">Pre-loaders</a> / <a href="components/progress-indicator/">Progress indicator</a> / <a href="components/application-progress-indicator/">Application progress indicator</a></p>
+    <p>
+      <a href="components/accordions">Accordions</a> /
+      <a href="components/anchor-navigation">Anchor navigation</a> /
+      <a href="components/application-progress-indicator/">Application progress indicator</a>
+      <a href="components/article-nav">Article nav</a> /
+      <a href="components/calendar">Calendar</a> /
+      <a href="components/card-blocks">Card blocks</a> /
+      <a href="components/modals">Modals</a> /
+      <a href="components/notifications">Notifications</a> /
+      <a href="components/pre-loaders">Pre-loaders</a> /
+      <a href="components/progress-indicator/">Progress indicator</a> /
+      <a href="components/responsive-tables">Responsive tables</a> /
+      <a href="components/search/">Search</a> /
+      <a href="components/tables">Tables</a> /
+      <a href="components/tabs">Tabs</a> /
+      <a href="components/tooltips">Tooltips</a> /
+      <a href="components/video/">Video</a> /
+    </p>
+  </div>
+
+  <div class="link-block col-md-4">
+    <h2><a href="page-sections/">Page sections</a></h2>
+    <p>
+      <a href="page-sections/confirmation-email/">Confirmation email</a> /
+    </p>
   </div>
 </div>
