--- a/_components/tables.html
+++ b/_components/tables.html
@@ -1,8 +1,11 @@
 ---
 layout: code-examples
+collection-name: Components
 title: Tables
+subtitle: Tables
 usage: 
 ---
+
 
 <h2>Table striped visible header</h2>
 <table class="table table-striped">
