--- a/_typography/paragraphs-and-text-styles.html
+++ b/_typography/paragraphs-and-text-styles.html
@@ -1,7 +1,7 @@
 ---
 layout: code-examples
 collection-name: Typography
-title: Body copy
+title: Paragraphs and text styles
 sub-title: How to use tags to display text with variations in weight and height.
 usage: How to use tags to display text with variations in weight and height.
 --- 
