added missing holding pages; nav updates

--- a/_components/block-quote.html
+++ b/_components/block-quote.html
@@ -1,9 +1,9 @@
 ---
 layout: code-examples
 collection-name: Components
-title: Article nav
-subtitle: Article nav
-usage: Contextual link within content
+title: Block quote
+subtitle: Block quote
+usage: --
 ---
 
 Content to be developed
