--- a/index.html
+++ b/index.html
@@ -82,11 +82,13 @@ layout: home
   <div class="link-block col-md-4">
     <h2><a href="components/">Components</a></h2>
     <p>
-      <a href="components/accordions">Accordions</a> /
+      <a href="components/accordion">Accordion</a> /
       <a href="components/anchor-navigation">Anchor navigation</a> /
       <a href="components/application-progress-indicator/">Application progress indicator</a>
       <a href="components/article-nav">Article nav</a> /
+      <a href="components/block-quote">Block quote</a> /
       <a href="components/calendar">Calendar</a> /
+      <a href="components/callout">Callout</a> /
       <a href="components/card-blocks">Card blocks</a> /
       <a href="components/modals">Modals</a> /
       <a href="components/notifications">Notifications</a> /
@@ -94,8 +96,10 @@ layout: home
       <a href="components/progress-indicator/">Progress indicator</a> /
       <a href="components/responsive-tables">Responsive tables</a> /
       <a href="components/search/">Search</a> /
+      <a href="components/section-heading/">Section heading</a> /
       <a href="components/tables">Tables</a> /
       <a href="components/tabs">Tabs</a> /
+      <a href="components/timeline-indicator">Timeline indicator</a> /
       <a href="components/tooltips">Tooltips</a> /
       <a href="components/video/">Video</a> /
     </p>
