--- a/_components/accordion.html
+++ b/_components/accordion.html
@@ -3,7 +3,7 @@ layout: code-examples
 collection-name: Components
 title: Accordions
 subtitle: Accordions
-usage: Setting up an Accordion.... Must be wrapped with '&lt;id="accordion"&gt;' .. Must use the data toggles and parents as shown in the code. All id's MUST be unique. If multiple Accordions are on the same page - the id for Accordions must be unique.
+usage: Show/Hide component. Setting up an Accordion.... Must be wrapped with '&lt;id="accordion"&gt;' .. Must use the data toggles and parents as shown in the code. All id's MUST be unique. If multiple Accordions are on the same page - the id for Accordions must be unique.
 ---
 
 
