--- a/_content-nav/breadcrumbs.html
+++ b/_content-nav/breadcrumbs.html
@@ -3,7 +3,7 @@ layout: code-examples
 collection-name: content-nav
 title: Breadcrumbs
 sub-title: Breadcrumbs
-usage: Indicate the current page’s location within a navigational hierarchy. Separators are automatically added in CSS through the ::after pseudo class.
+usage: Indicate the current page’s location within a navigational hierarchy. Separators are automatically added in CSS through the ::after pseudo class. Located at the top of each page directly under the Page Header.
 --- 
 
  <nav class="breadcrumbs" aria-label="Breadcrumb">   
